samples/_failures_safe/1761094938_d5c6f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_567944b8.c: In function ‘main’:
./samples/SAFE/__tmp_567944b8.c:145:37: error: ‘test_data’ undeclared (first use in this function); did you mean ‘test_data3’?
  145 |     if (add_compression_block(&ctx, test_data
      |                                     ^~~~~~~~~
      |                                     test_data3
./samples/SAFE/__tmp_567944b8.c:145:37: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_567944b8.c:145:46: error: expected ‘)’ at end of input
  145 |     if (add_compression_block(&ctx, test_data
      |                              ~               ^
      |                                              )
./samples/SAFE/__tmp_567944b8.c:145:9: error: too few arguments to function ‘add_compression_block’
  145 |     if (add_compression_block(&ctx, test_data
      |         ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_567944b8.c:65:5: note: declared here
   65 | int add_compression_block(struct CompressionContext *ctx, const uint8_t *data, uint32_t size) {
      |     ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_567944b8.c:145:5: error: expected declaration or statement at end of input
  145 |     if (add_compression_block(&ctx, test_data
      |     ^~
